--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <h1 class="blue">我是标题</h1>
     <!-- 超链接 target默认是_self ：不跳转 ， _blank ： 跳转-->
     <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">1.听免费歌</a>
     <br>
@@ -29,34 +30,34 @@
      <!-- <audio src="../Music/fssx.flac" controls></audio> -->
      <p>听听歌</p>
      <audio controls>
-         <source src="../Music/fssx.flac"> 
+         <source src="./Music/fssx.flac"> 
      </audio>
      <br>
 
      <!-- 视频 -->
      <p id="yellow"> 看看视频</p>
      <video controls width="800"  height="600">
-         <source src="../Video/fssx.mp4">
+         <source src="./Video/fssx.mp4">
      </video>
      <br>
 
      <!-- 图片 -->
      <p> 看看图片</p>
-     <img width="300" src="../Picture/66.jpg" alt="66">
-    <br>
-    <img width="300" src="https://tse1-mm.cn.bing.net/th/id/R-C.901f8ebdab22d065baefeae6c2701cc0?rik=Z3Hew18zFaF%2bLQ&riu=http%3a%2f%2fwww.pp3.cn%2fuploads%2f20120418lw%2f13.jpg&ehk=Es5ZGH90h%2foCghvlIwdKfUiqpO05gLSgOEBU2i0Mwok%3d&risl=&pid=ImgRaw&r=0" alt="beauty">
-    <br>
+     <img width="300" src="./Picture/66.jpg" alt="66">
+     <br>
+     <img width="300" src="https://tse1-mm.cn.bing.net/th/id/R-C.901f8ebdab22d065baefeae6c2701cc0?rik=Z3Hew18zFaF%2bLQ&riu=http%3a%2f%2fwww.pp3.cn%2fuploads%2f20120418lw%2f13.jpg&ehk=Es5ZGH90h%2foCghvlIwdKfUiqpO05gLSgOEBU2i0Mwok%3d&risl=&pid=ImgRaw&r=0" alt="beauty">
+     <br>
 
-    <!-- 内联框架 -->
-    <p>看看B站</strong></p>
+     <!-- 内联框架 -->
+     <p>看看B站</strong></p>
 
-    <iframe src="https://www.bilibili.com" width="800"  height="600" frameborder="0"></iframe>
-    <br>
+     <iframe src="https://www.bilibili.com" width="800"  height="600" frameborder="0"></iframe>
+     <br>
 
-    <p class="blue abc">测试文本（占位用,无意义）</p>    
-    <p><font color="red" size="6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.</font></p>
+     <p class="blue abc">测试文本（占位用,无意义）</p>    
+     <p><font color="red" size="6">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero obcaecati sed eum dignissimos reiciendis, officiis quidem fugiat autem reprehenderit minus nobis? Distinctio delectus molestiae fugit in illum! Libero, officia ad.</font></p>
    
-    <a id="bottom" href="#">点我上天堂</a>
+     <a id="bottom" href="#">点我上天堂</a>
 
 </body>
 </html>    
