--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1 class="blue">我是标题</h1>
+    <h1 class="blue">欢迎来到我的网页</h1>
     <!-- 超链接 target默认是_self ：不跳转 ， _blank ： 跳转-->
     <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">1.听免费歌</a>
     <br>
@@ -25,6 +25,11 @@
     <br>
     <a href="#bottom">点我下地狱</a>
     <br>
+
+    <!-- 盒子模型 -->
+    <p>学习边框中</p>
+    <div id="box1"></div>
+
 
      <!-- 音乐 -->
      <!-- <audio src="../Music/fssx.flac" controls></audio> -->
