--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1 class="pink">欢迎来到瑶瑶学习屋</h1>
+    <h1 class="pink">欢迎来到我的学习屋</h1>
     <!-- 超链接 target默认是_self ：不跳转 ， _blank ： 跳转-->
     <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">1.听免费歌</a>
     <br>
@@ -29,7 +29,7 @@
     <!-- 盒子模型 -->
     <p>学习边框中</p>
     <div class="box1">
-        <div class="inner"></div>
+        <div class="inner">111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>111111111111111111111<br>我爱你</div>
     </div>
 
 
@@ -177,6 +177,9 @@
     如果将宽度和外边距（或者两个外边距）都设置为auto，则宽度会被设置为最大<br>
     将两个外边距都设置为auto，给内容区设置width，则可以居中<br><br>
 
+    19.垂直方向的布局：<br>
+    使用overflow控制溢出部分: 可选值有 visible(显示)  hidden(隐藏)  scroll(生成滚动条) auto(自适应生成滚动条) <br>
+    overflow-x , overflow-y 分别控制横纵轴方向的溢出<br><br>
     </p>
      
     
