--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
     兄弟元素：取两者中较大的（若都为正值）；取两者的和（若一正一负）；取绝对值较大的（若都为负值）<br>
     父子元素：子元素的上外边距会传递给父元素,可以给父元素添加border-top或者padding-top来解决，但不是完美方案<br><br>    
     
+    21.行内元素的盒子模型：<br>
+    不能设置width,height<br>
+    可以设置padding，border，margin，但是垂直方向的这些不会影响页面布局（不会挤别人，但有可能覆盖） <br>      
+    display可选值：inline 将元素设置为行内元素；block 将元素设置为块元素<br><br>
 
     </p>
 
