--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="前端学习">
     <!-- 跳转页面 -->
     <!-- <meta http-equiv="refresh" content="3;url=https://www.baidu.com"> -->
-    <title>学习中</title>
+    <title>百度</title>
     
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -18,8 +18,6 @@
     <h1 class="pink">欢迎来到我的学习屋</h1>
     <!-- 超链接 target默认是_self ：不跳转 ， _blank ： 跳转-->
     <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">1.听免费歌</a>
-    <br>
-    <a href="./排序.html" target="_blank">2.跳转到排序</a>
     <br>
     <a href="./黄色.html" target="_blank">--> giegie点我 <---看黄色哦</a>
     <br>
