--- a/黄色.html
+++ b/黄色.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p><font color="yellow" size="100px">黄色</font></p>
+    <p class="yellow">黄色</p>
 </body>
 </html>
