--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1 class="pink">欢迎来到我的学习屋</h1>
     <!-- 超链接 target默认是_self ：不跳转 ， _blank ： 跳转-->
-    <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">1.听免费歌</a>
+    <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">听免费歌</a>
     <br>
     <a href="./黄色.html" target="_blank">--> giegie点我 <---看黄色哦</a>
     <br>
