--- a/exercise/京东图片列表.html
+++ b/exercise/京东图片列表.html
@@ -5,23 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./京东.css">
+    <style>
+        ul{
+            list-style-type: none;
+            width: 190px;
+            height: 470px;
+            margin: 50px auto;
+        }  
+        img{
+            width: 100%;
+        }
+        li{
+            margin-bottom: 7px;
+        }
+    </style>
 </head>
 <body>
     <ul>
         <li>
             <a href="javacript:;">
-                <img src="../Picture/1.jpg" alt="1">
+                <img src="./img/1.jpg" alt="1">
             </a>
         </li>
         <li>
             <a href="javacript:;">
-                <img src="../Picture/2.jpg" alt="2">
+                <img src="./img/2.jpg" alt="2">
             </a>
         </li>
         <li>
             <a href="javacript:;">
-                <img src="../Picture/3.png" alt="3">
+                <img src="./img/3.png" alt="3">
             </a>
         </li>
     </ul>
