--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         2.可以设置padding，border，margin，但是垂直方向的这些不会影响页面布局（不会挤别人，但有可能覆盖） <br>      
         3.display可选值：inline 将元素设置为行内元素；block 将元素设置为块元素；
           inline-block 设置为行内块元素（既不独占一行，又可设置宽高）；table 设置为表格；none 隐藏<br>
-        4.visibility 可选值：hidden 隐藏（会占位）   <br>
+        4.visibility 可选值：hidden 隐藏（会占位）   <br><br>
     
     22.隐藏ul排序的小点点：list-style-type: none <br><br>      
     </p>
