--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- 超链接 target默认是_self ：不跳转 ， _blank ： 跳转-->
     <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">听免费歌</a>
     <br>
-    <a href="./黄色.html" target="_blank">--> giegie点我 <---看黄色哦</a>
+    <a href="./黄色.html" target="_blank">--> giegie点我 <---</a>
     <br>
     <a id="top" href="#bottom">*点我下地狱*</a>
     <br>
