--- a/exercise/网易右侧.html
+++ b/exercise/网易右侧.html
@@ -7,7 +7,7 @@
     <title>网易</title>
     <style>
         a{
-            color: black;
+           
             text-decoration:none;
             font-weight: bold;
         }
@@ -16,10 +16,13 @@
         }
         .news-wrapper{
            width: 380px;
-           height: 455px;
+           height: 485px;
            background-color: bisque;
            margin: 50px auto;
            border-top: 3px solid #ddd; 
+        }
+        .news-wrapper .news-title a{
+            color: black;
         }
         ul{
             margin-top: 0;
@@ -45,7 +48,17 @@
         }
         .new-list{
             height: 150px;
-            margin-top: 20px
+            margin-top: 20px;
+        }
+        .new-list li{
+            margin-bottom: 17px;
+        }
+        .new-list li a{
+            margin-bottom: 14px;
+            color: #666;
+        }
+        .news-img .img-title {
+            color: white;
         }
     </style>
 
