--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                  3.只能指定内边距的宽度 padding:10px      <br> <br>                                               
         17.4设置外边距（padding）:<br>只能指定外边距的宽度 padding:10px  <br>
         17.5轮廓线（outline）：在可见框的外面增加一圈轮廓，不会影响可见框的大小，可实现鼠标移动到一段话时，生成轮廓线的效果<br><br>
-        17.6阴影(box-shadow)：apx bpx color , a：阴影的水平位置（正右负左） ，b:阴影的垂直位置（正下负上）
+        17.6阴影(box-shadow)：apx bpx cpx color , a：阴影的水平位置（正右负左） ，b:阴影的垂直位置（正下负上）, c:模糊半径
 
 
     18.水平方向的布局<br>
