--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
     
     22.隐藏ul排序的小点点：list-style-type: none <br><br>      
 
-  
+    23.浮动：使元素向父元素的左侧或右侧移动，设置浮动后，水平布局的等式就不用强制成立，还会从文档流中脱离<br>
+            float: none(不浮动) left(向左) right(向右) <br><br>
     </p>
 
      <a id="bottom" href="#">*点我上天堂*</a>
