--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
 <body>
     <h1 class="pink">欢迎来到我的学习屋</h1>
     <!-- 超链接 target默认是_self ：不跳转 ， _blank ： 跳转-->
-    <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">听免费歌</a>
-    <a href="./黄色.html" target="_blank">--> giegie点我 <---</a>
-    <a id="top" href="#bottom">*点我下地狱*</a>
+    <div class="tt">
+        <a href="http://tools.liumingye.cn/music/?page=searchPage" target="_blank">听免费歌</a>
+        <a href="./黄色.html" target="_blank">--> giegie点我 <---</a>
+        <a id="top" href="#bottom">*点我下地狱*</a>
+    </div>
+    
     
 
     <!-- 盒子模型 -->
