--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@
             float: none(不浮动) left(向左) right(向右) <br><br>
     </p>
 
-     <a id="bottom" href="#">*点我上天堂*</a>
+    <div class="t">
+        <a id="bottom" href="#">*点我上天堂*</a>
+    </div>
+    
 
 </body>
 </html>    
