--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <!-- <meta http-equiv="refresh" content="3;url=https://www.baidu.com"> -->
     <title>百度</title>
     
+    <script>
+        alert("这是我的第一个网页");
+    </script>
+
     <link rel="stylesheet" href="./style.css">
 </head>
 
