--- a/exercise/导航条升级版.html
+++ b/exercise/导航条升级版.html
@@ -10,22 +10,25 @@
         div{
             margin-left: auto;
             margin-right: auto;
-            width: 1350px;
-            margin-top: 20px;
-        }
-        a{
-            float: left;
-            background-color: grey;
-            width: 150px;
-            color: black;
-            padding-left: 20px;
-            padding-right: 20px;
-            text-decoration: none;
+            border: 0;
+            width: 1120px;
+            margin-top: 50px;
             height: 50px;
+            background-color: grey;
+         }
+        a{
+            display: block;
+            float: left;
+            width: 120px;
+            color: black;
+            padding: 0 20px;
+            border: 0;
+            text-align: center;
+            text-decoration: none;
             line-height:50px;
         }
         a:hover{
-            color: aquamarine;
+            background-color: aquamarine;
         }
     </style>
 </head>
